--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "antd-iconfont",
   "version": "2.10.0",
+  "keywords": [
+    "antd",
+    "iconfont",
+    "offline"
+  ],
+  "description": "antd offline iconfont",
   "main": "iconfont.js",
   "repository": "https://github.com/builden/antd-iconfont.git",
   "author": "builden <billdeng@qq.com>",
