--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "antd-iconfont",
-  "version": "2.10.0",
-  "keywords": [
-    "antd",
-    "iconfont",
-    "offline"
-  ],
+  "version": "3.0.3",
+  "keywords": ["antd", "iconfont", "offline"],
   "description": "antd offline iconfont",
   "main": "iconfont.js",
   "repository": "https://github.com/builden/antd-iconfont.git",
